--- a/AllDemoInOne/res/values/strings.xml
+++ b/AllDemoInOne/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">All Demo In One</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-
+	<string name="applicationId">enter facebook id here</string>
 </resources>
